--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,11 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'com.zopim.android', name: 'sdk', version: '1.4.0'
+    implementation group: 'com.zendesk', name: 'support', version: '2.2.1'
+    //implementation group: 'com.zendesk', name: 'support-providers', version: '2.2.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -40,5 +41,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-v4'
     }
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.2.71"
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
+
 }
 apply plugin: 'com.google.gms.google-services'
