--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rodolfosarabo.testezendeskchatapi">
 
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:name="com.example.rodolfosarabo.testezendeskchatapi.Global"
         android:allowBackup="true"
@@ -10,19 +14,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.rodolfosarabo.testezendeskchatapi.MainActivity">
+        <activity android:name=".view.activity.BaseActivity"/>
+        <activity android:name=".view.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.rodolfosarabo.testezendeskchatapi.PreChatActivity"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity"/>
-        </activity>
+        <activity android:name=".view.activity.ChatListActivity"/>
+        <activity android:name=".view.activity.NewChatFormActivity"/>
+        <activity android:name=".view.activity.ChatActivity" />
+        <activity android:name=".view.activity.ZendeskSdkActivity" />
 
         <service android:name="com.example.rodolfosarabo.testezendeskchatapi.firebase.MyFirebaseMessagingService">
             <intent-filter>
